feat: remove functions that are already called - set temperature of llm to 0.3 (so llm uses more tool calls)